2001-05-07  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* tests/srfi-13.test: New file testing the SRFI string library.

2001-04-26  Gary Houston  <ghouston@arglist.com>

	* tests/r4rs.test: delete files tmp1, tmp2, tmp3 after the tests
	have run.

	* tests/ports.test (test-file), tests/load.test (temp-dir):
	redefined using data-file-name instead of tmpnam.  the test files
	will be created in the build directory instead of /var/tmp or
	whereever tmpnam puts them.

2001-04-02  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/symbols.c:  Added some tests.

2001-03-19  Gary Houston  <ghouston@arglist.com>

	* tests/r4rs.test: use test-file-name to locate r4rs.test,
	not data-file-name.

	* guile-test: define tmp-dir, the location where r4rs.test will
	create it's temporary files.
	(data-file-name): use tmp-dir.  this must be under build-dir,
	not src-dir.

2001-03-18  Gary Houston  <ghouston@arglist.com>

	* guile-test: use #!/bogus-path/..., not #!/home/dirk/... in the
	first line.
	
2001-03-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/syntax.test:  Added a test for let* bindings and
	re-arranged and slightly improved the existing one.

2001-03-09  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* tests/syntax.test ("let*"): Changed the `duplicate bindings'
	test, dups are allowed in `let*' and are now expected to pass.

2001-03-05  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* lib.scm (run-test-exception):  Preserve the original error's
	stack for re-throwing.

2001-03-04  Marius Vollmer  <mvo@zagadka.ping.de>

	* tests/syntax.test ("let,duplicate bindings", "let*,duplicate
	bindings", "letrec,duplicate bindings"): Expect to pass, bug has
	been fixed.

2001-03-03  Marius Vollmer  <mvo@zagadka.ping.de>

	* tests/syntax.test ("duplicate formals"): New category, move
	appropriate tests here.  Expect them to pass.
	("empty parentheses"): Expect to pass, bug has been fixed.
	
	* tests/alist.test: Use "'()" instead of "()" in all places